--- a/configs/eval_config.yml
+++ b/configs/eval_config.yml
@@ -67,8 +67,8 @@ llms:
     _type: nim
     model_name: meta/llama-3.3-70b-instruct
     temperature: 0.0
-    base_url: https://integrate.api.nvidia.com/v1
-    api_key: ${NVIDIA_API_KEY}
+    base_url: ${INSTRUCT_LLM_BASE_URL:-http://aira-instruct-llm:8000/v1}
+    api_key: not-needed
   # The reasoning llm is used for report planning and reflection and should be a reasoning model
   # that supports thinking tokens. The default configuration below is used assuming a docker compose
   # deployment of AIRA and RAG with a local NVIDIA NIM microservice for the nemotron model.
@@ -77,10 +77,10 @@ llms:
     _type: nim
     model_name : nvidia/llama-3.3-nemotron-super-49b-v1
     temperature: 0.5
-    base_url: https://integrate.api.nvidia.com/v1
+    base_url: ${NEMOTRON_LLM_BASE_URL:-http://nim-llm-ms:8000/v1}
     disable_streaming: false # Disable streaming with nim models
-    api_key: ${NVIDIA_API_KEY}  # Uncomment this for hosted endpoint
-    max_tokens: 5000  
+    api_key: not-needed  # Uncomment this for hosted endpoint
+    max_tokens: 5000
 
   eval_llm:
     _type: nim
