--- a/configs/config.yml
+++ b/configs/config.yml
@@ -63,6 +63,7 @@ llms:
     model_name: meta/llama-3.3-70b-instruct
     temperature: 0.0
     base_url: ${INSTRUCT_LLM_BASE_URL:-http://aira-instruct-llm:8000/v1}
+    max_tokens: 5000
     api_key: not-needed
   # The reasoning llm is used for report planning and reflection and should be a reasoning model
   # that supports thinking tokens. The default configuration below is used assuming a docker compose
