--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "aiqtoolkit-langchain>=1.2.0a20250703",
   "aiqtoolkit-weave>=1.2.0a20250703",
   "aiqtoolkit>=1.2.0a20250703",
+  "aiqtoolkit-opentelemetry>=1.2.0a20250703",
   "aiohappyeyeballs==2.4.4",
   "aiohttp",
   "aiosignal==1.3.2",
