--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -104,7 +104,7 @@ services:
 
   aira-frontend:
     container_name: aira-frontend
-    image: nvcr.io/nvidia/blueprint/aira-frontend:v1.1.0
+    image: nvcr.io/nvstaging/blueprint/aira-frontend:v1.1.0a20250731
     ports:
       - "3000:3000"
     expose:
@@ -124,6 +124,15 @@ services:
       STARFLEET_REDIRECT_URI: ${STARFLEET_REDIRECT_URI:-http://localhost:3000/api/auth/callback/nvlogin}
       # Common Configuration
     profiles: ["aira"]
+
+  phoenix:
+    image: arizephoenix/phoenix:latest
+    ports:
+      - "6006:6006"  # UI and OTLP HTTP collector
+      - "4317:4317"  # OTLP gRPC collector
+    networks:
+      - nvidia-rag
+    profiles: ["aira-phoenix"]
 
 # Use the nvidia-rag network created by the
 # RAG docker compose deployment
