--- a/configs/config.yml
+++ b/configs/config.yml
@@ -78,7 +78,7 @@ llms:
   # Update if you are deploying differently or using hosted NVIDIA NIM microservices.
   nemotron:
     _type: nim
-    model_name : nvidia/llama-3.3-nemotron-super-49b-v1
+    model_name : nvidia/llama-3_3-nemotron-super-49b-v1_5
     temperature: 0.5
     base_url: ${NEMOTRON_LLM_BASE_URL:-http://nim-llm-ms:8000/v1}
     max_tokens: 5000
