--- a/configs/hosted-config.yml
+++ b/configs/hosted-config.yml
@@ -64,7 +64,7 @@ llms:
   # Update if you are deploying differently or using hosted NVIDIA NIM microservices.
   nemotron:
     _type: openai
-    model_name : nvidia/llama-3.3-nemotron-super-49b-v1
+    model_name : nvidia/llama-3_3-nemotron-super-49b-v1_5
     temperature: 0.5
     base_url: https://integrate.api.nvidia.com/v1
     max_tokens: 5000
