--- a/aira/configs/config.yml
+++ b/aira/configs/config.yml
@@ -41,7 +41,7 @@ llms:
   # Update if you are deploying differently or using hosted NVIDIA NIM microservices.
   nemotron:
     _type: openai
-    model_name : nvidia/llama-3.3-nemotron-super-49b-v1
+    model_name : nvidia/llama-3_3-nemotron-super-49b-v1_5
     temperature: 0.5
     base_url: http://nim-llm-ms:8000/v1 # default if deployed using RAG blueprint and docker compose
     max_tokens: 5000
