--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -62,7 +62,7 @@ services:
       OPENAI_API_KEY: ${NVIDIA_API_KEY:-your-nvidia-api-key}
       AIRA_HOSTED_NIMS: ${AIRA_HOSTED_NIMS:-false}
       # Required for rag middleware via fastapi extensions
-      RAG_INGEST_URL: ${RAG_INGEST_URL:-http://rag-server:8082/v1}
+      RAG_INGEST_URL: ${RAG_INGEST_URL:-http://ingestor-server:8082/v1}
       # Redis configuration for session management
       REDIS_HOST: ${REDIS_HOST:-aira-redis}
       REDIS_PORT: ${REDIS_PORT:-6380}
