--- a/configs/hosted-config.yml
+++ b/configs/hosted-config.yml
@@ -53,18 +53,19 @@ llms:
   # that uses local NVIDIA NIM microservices.
   # Update if you are deploying differently or using hosted NVIDIA NIM microservices.
   instruct_llm:
-    _type: openai
+    _type: nim
     model_name: meta/llama-3.3-70b-instruct
     temperature: 0.0
     base_url: https://integrate.api.nvidia.com/v1
+    max_tokens: 20000
 
   # The reasoning llm is used for report planning and reflection and should be a reasoning model
   # that supports thinking tokens. The default configuration below is used assuming a docker compose
   # deployment of AIRA and RAG with a local NVIDIA NIM microservice for the nemotron model.
   # Update if you are deploying differently or using hosted NVIDIA NIM microservices.
   nemotron:
-    _type: openai
-    model_name : nvidia/llama-3_3-nemotron-super-49b-v1_5
+    _type: nim
+    model_name : nvidia/llama-3.3-nemotron-super-49b-v1.5
     temperature: 0.5
     base_url: https://integrate.api.nvidia.com/v1
     max_tokens: 5000
@@ -74,6 +75,8 @@ llms:
 functions:
   generate_query:
     _type: generate_queries
+    rag_url: ${RAG_SERVER_URL:-http://rag-server:8081/v1}
+    ingestor_url: ${RAG_INGEST_URL:-http://ingestor-server:8082/v1}
 
   generate_summary:
     _type: generate_summaries
