--- a/aira/configs/hosted-config.yml
+++ b/aira/configs/hosted-config.yml
@@ -30,8 +30,8 @@ llms:
   # that uses local NVIDIA NIM microservices.
   # Update if you are deploying differently or using hosted NVIDIA NIM microservices.
   instruct_llm:
-    _type: openai
-    model_name: nim
+    _type: nim
+    model_name: meta/llama-3.3-70b-instruct
     temperature: 0.0
     base_url: https://integrate.api.nvidia.com/v1
     
