--- a/deploy/compose/docker-compose.yaml
+++ b/deploy/compose/docker-compose.yaml
@@ -47,6 +47,8 @@ services:
       AIRA_APPLY_GUARDRAIL: "false"
       NVIDIA_API_KEY: ${NVIDIA_API_KEY:-your-nvidia-api-key}
       AIRA_HOSTED_NIMS: ${AIRA_HOSTED_NIMS:-false}
+      # Required for rag middleware via fastapi extensions
+      RAG_INGEST_URL: ${RAG_INGEST_URL:-http://rag-server:8082/v1}
     volumes:
       - ../../configs:/app/configs
     networks:
@@ -55,11 +57,11 @@ services:
     
   aira-frontend:
     container_name: aira-frontend
-    image: nvcr.io/nvidia/blueprint/aira-frontend:v1.1.0
+    image: nvcr.io/nvstaging/blueprint/aira-frontend:v1.1.1
     ports:
-      - "3001:3001"
+      - "3000:3000"
     expose:
-      - "3001"
+      - "3000"
     networks:
       - nvidia-rag
     environment:
