Replace nginx with custom fastapi routes (#29)
* Update to custom fastapi frontend

* Add custom routes

* Update frontend container

* Add GET handler for /collections endpoint and update routing in FastAPI

* Refactor POST /collections handler to simplify request forwarding to RAG service and update document upload metadata default to blocking

* Refactor POST /collections handler to accept a simple list of collection names and set default parameters for collection type and embedding dimension. Update model name format in configuration file.

* Update model name format in configuration file for nemotron LLM to align with naming conventions.

* Update aira-frontend image version to v1.2.0 and adjust port mappings in docker-compose files for both deploy/compose and deploy/workbench.

* Update aira-frontend image reference in docker-compose

* Add RAG_SERVER_URL env var for aira-frontend

* Update backend container to latest ubuntu base image

* Update frontend container version in local-development.md

* Update frontend port to 3000 in docs and notebook

---------

Co-authored-by: Ajay Thorve <athorve@nvidia.com>

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,7 +1,7 @@
 general:
   use_uvloop: true
   front_end:
-    _type: fastapi
+    _type: aira_frontend
     endpoints:
       - path: /generate_query
         method: POST
@@ -42,7 +42,7 @@ llms:
   # Update if you are deploying differently or using hosted NVIDIA NIM microservices.
   nemotron:
     _type: nim
-    model_name : nvidia/llama-3.3-nemotron-super-49b-v1.5
+    model_name : nvidia/llama-3_3-nemotron-super-49b-v1_5
     temperature: 0.5
     base_url: ${NEMOTRON_LLM_BASE_URL:-http://nim-llm-ms:8000/v1}
     max_tokens: 5000
@@ -57,13 +57,13 @@ functions:
   generate_summary:
     _type: generate_summaries
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose
-    rag_url: http://rag-server:8081/v1 
+    rag_url: ${RAG_SERVER_URL:-http://rag-server:8081/v1}
 
   artifact_qa:
     _type: artifact_qa
     llm_name: instruct_llm
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose
-    rag_url: http://rag-server:8081/v1
+    rag_url: ${RAG_SERVER_URL:-http://rag-server:8081/v1}
   
   health_check:
     _type: health_check
