--- a/configs/hosted-config.yml
+++ b/configs/hosted-config.yml
@@ -1,7 +1,7 @@
 general:
   use_uvloop: true
   front_end:
-    _type: fastapi
+    _type: aira_frontend
     endpoints:
       - path: /generate_query
         method: POST
@@ -55,13 +55,13 @@ functions:
   generate_summary:
     _type: generate_summaries
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose
-    rag_url: http://rag-server:8081/v1 
+    rag_url: ${RAG_SERVER_URL:-http://rag-server:8081/v1}
 
   artifact_qa:
     _type: artifact_qa
     llm_name: instruct_llm
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose
-    rag_url: http://rag-server:8081/v1
+    rag_url: ${RAG_SERVER_URL:-http://rag-server:8081/v1}
   
   health_check:
     _type: health_check
