--- a/deploy/workbench/docker-compose.yaml
+++ b/deploy/workbench/docker-compose.yaml
@@ -57,39 +57,19 @@ services:
     environment:
       AIRA_HOSTED_NIMS: ${AIRA_HOSTED_NIMS:-false}
     profiles: ["aira-gpu"]
-
-  aira-nginx:
-    image: nginx:latest
-    container_name: aira-nginx
-    ports:
-      - "8051:8051"
-    expose:
-      - "8051"
-    environment:
-      # If you are deploying RAG separately,
-      # update to match the URL for the Ingestor Server in your RAG deployment
-      - RAG_INGEST_URL=${RAG_INGEST_URL:-http://ingestor-server:8082}
-      - AIRA_BASE_URL=${AIRA_BASE_URL:-http://aira-backend:3838}
-    volumes:
-      - ./nginx.conf.template:/etc/nginx/templates/nginx.conf.template
-    networks:
-      - nvidia-rag
-    profiles: ["aira-no-gpu", "aira-gpu"]
     
   aira-frontend:
     container_name: aira-frontend
-    image: nvcr.io/nvidia/blueprint/aira-frontend:v1.0.0
+    image: nvcr.io/nvidia/blueprint/aira-frontend:v1.2.0
     ports:
-      - "3001:3001"
+      - "3000:3000"
     expose:
-      - "3001"
+      - "3000"
     networks:
       - nvidia-rag
-    depends_on:
-      - aira-nginx
     environment:
       NVWB_TRIM_PREFIX: true
-      INFERENCE_ORIGIN: ${INFERENCE_ORIGIN:-http://aira-nginx:8051}
+      INFERENCE_ORIGIN: ${INFERENCE_ORIGIN:-http://aira-backend:3838}
     profiles: ["aira-no-gpu", "aira-gpu"]
 
   aira-load-files:
