Changed deprecated aiq cli to newer nat cli due to nat 1.2. Updated custom evaluator documentation. Minor fix to account for edge case in ragas_wrapper evaluator

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,7 +101,7 @@ weave = [
 [tool.uv]
 managed = true
 
-[project.entry-points.'aiq.plugins']
+[project.entry-points.'nat.plugins']
 aiq_aira = "aiq_aira.register"
 
 [project.scripts]
