--- a/configs/eval_config.yml
+++ b/configs/eval_config.yml
@@ -44,7 +44,7 @@ general:
     logging:
       console:
         _type: console
-        level: DEBUG
+        level: WARNING
     # Uncomment this if you want to use W&B Weave for tracing
     # tracing:
     #   weave:
@@ -79,7 +79,7 @@ llms:
     _type: nim
     model_name: meta/llama-3.1-70b-instruct
     temperature: 0.0
-    base_url: https://integrate.api.nvidia.com/v1
+    base_url: ${EVAL_LLM_BASE_URL:-https://integrate.api.nvidia.com/v1}
     api_key: ${NVIDIA_API_KEY}
 
   # Mistral is a good model for RAGAS metrics due to the variability it provides as opposed to the llama models
@@ -87,7 +87,7 @@ llms:
     _type: nim
     model_name: mistralai/mixtral-8x22b-instruct-v0.1
     temperature: 0.0
-    base_url: https://integrate.api.nvidia.com/v1
+    base_url: ${RAGAS_LLM_BASE_URL:-https://integrate.api.nvidia.com/v1}
     api_key: ${NVIDIA_API_KEY}
 
 functions:
@@ -97,13 +97,13 @@ functions:
   generate_summary:
     _type: generate_summaries
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose
-    rag_url: http://rag-server:8081/v1
+    rag_url: ${RAG_SERVER_URL:-http://rag-server:8081/v1}
 
   artifact_qa:
     _type: artifact_qa
     llm_name: instruct_llm
     # update to the IP address of the RAG server if you are not deploying RAG with docker compose (using one of our endpoints for now)
-    rag_url: http://rag-server:8081/v1
+    rag_url: ${RAG_SERVER_URL:-http://rag-server:8081/v1}
     
   health_check:
     _type: health_check
