--- a/configs/hosted-config.yml
+++ b/configs/hosted-config.yml
@@ -34,6 +34,7 @@ llms:
     model_name: meta/llama-3.3-70b-instruct
     temperature: 0.0
     base_url: https://integrate.api.nvidia.com/v1
+    max_tokens: 20000
     
   # The reasoning llm is used for report planning and reflection and should be a reasoning model
   # that supports thinking tokens. The default configuration below is used assuming a docker compose
