--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,13 @@ root = "."
 name = "aiq_aira"
 dynamic = ["version"]
 dependencies = [
-  "nvidia-nat[langchain,opentelemetry,phoenix,weave]~=1.2",
+  "nvidia-nat[langchain,opentelemetry,weave]~=1.2",
   "aiohappyeyeballs==2.4.4",
   "aiohttp",
   "aiosignal==1.3.2",
   "annotated-types==0.7.0",
   "anyio==4.8.0",
   "appdirs~=1.4.4",
-  "arize-phoenix~=6.1",
   "async-timeout==5.0.1",
   "attrs==25.1.0",
   "certifi==2025.1.31",
