Add security configuration for prompt sanitization and update filtering logic
- Introduced a new YAML configuration file (`security_config.yml`) to manage blocked patterns for prompt filtering.
- Updated the schema to load blocked patterns from the new config file, with a fallback to default patterns.
- Enhanced documentation to reflect the new configuration approach and usage instructions for pattern management.

--- a/deploy/helm/aiq-aira/templates/configmap.yaml
+++ b/deploy/helm/aiq-aira/templates/configmap.yaml
@@ -5,3 +5,5 @@ metadata:
 data:
   config.yml: |-
     {{ (.Files.Get "files/app-config.yml") | nindent 4 }}
+  security_config.yml: |-
+    {{ (.Files.Get "files/security_config.yml") | nindent 4 }}
